--- a/Projects/MistoEnergy2/app/scss/media.scss
+++ b/Projects/MistoEnergy2/app/scss/media.scss
@@ -87,7 +87,6 @@
 			margin-top: 0;
 			padding-top: 0;
 		}
-
 	}
 
 
@@ -258,7 +257,7 @@
 	.remodal {
 		padding: 15px;
 		label {
-			padding: 10px;
+			padding: 10px 5px;
 		}
 	}
 }
@@ -361,14 +360,45 @@
 		}
 	}
 
+	.remodal {
+		.remodal__title {
+			font-size: 1.2rem;
+			padding-bottom: 20px;
+			text-align: center;
+		}
+		.remodal__text {
+			text-align: left;
+			font-size: 1.2rem;
+			word-break: break-all;
+		}
+		label {
+			padding: 0;
+			font-weight: 300;
+			font-size: 1.2rem;
+			text-align: left;
+		}
+		.right {
+			text-align: left;
+		} 
+		td {
+			font-size: 1.2rem;
+			padding: 0; 
+		}
+		.size {
+			word-break: break-all;
+		}
+	}
+
 
 }
 
 
 @media only screen and (max-width: 420px) {
-
+	body {
+		font-size: 1.1rem;
+	}
 	.section__title {
-		font-size: 1.4rem;
+		font-size: 1.2rem;
 		letter-spacing: 0;
 	}
 
@@ -388,12 +418,16 @@
 				font-size: 1rem;
 			}
 		}
+		&__text {
+			font-size: 1rem;
+		}
 	}
-
+	.offer__form {
+		padding: 10px;
+	}
 	.counters {
 		&__text-accent  {
-			padding: 0 15px;
-			padding-left: 15px;
+			padding: 0;
 		}
 		&__list {
 			padding-left: 15px;
@@ -420,6 +454,26 @@
 		&__img {
 			max-width: 140px;
 			max-height: 57px;
+		}
+	}
+
+	.remodal {
+		.remodal__title {
+			font-size: 1rem;
+		}
+		.remodal__text {
+			font-size: 1rem;
+		}
+		label {
+			padding: 0;
+			font-weight: 300;
+			text-align: left;
+		}
+		td {
+			font-size: .78rem;
+		}
+		.size {
+			word-break: break-all;
 		}
 	}
 
